erp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-resource
  namespace: erpnext
  annotations: 
    kubernetes.io/ingress.class: nginx
    #haproxy.org/path-rewrite: "/"

    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "k8-atd.mmis.space"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-erpnext
            port:
              number: 8080
